# molpack

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  index.html  pyproject.toml  tox.ini  zensical.toml  zensical.zh.toml
.claude/agents/: mpk-bindings.md  mpk-documenter.md
.claude/skills/mpk-docs/: SKILL.md
.claude/skills/mpk-impl/: SKILL.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: bench.yml  ci.yml  docs.yml  main.yml  publish-crate.yml  publish-pypi.yml
benches/: objective_dispatch.rs  pack_end_to_end.rs  pair_kernel.rs  restraint_eval.rs  run_iteration.rs
dev/bench/: data.js
docs/: README.md  concepts.md  extending.md  getting_started.md  index.md  install.md  root-redirect.html  rust_review_spec.md
docs/assets/stylesheets/: extra.css
docs/cli/: formats.md  script-format.md
docs/en/: examples.md  index.md
docs/en/rust/: handlers-relaxers.md
docs/python/: api-reference.md  examples.md  getting-started.md  index.md  installation.md
docs/python/guide/: packer.md  periodic-boundaries.md  restraints.md  targets.md
docs/rust/: examples.md  getting-started.md  index.md  restraints-and-pbc.md
docs/zh/: extending.md  getting_started.md  img  index.md  install.md  packmol_parity.md
docs/zh/cli/: examples.md  index.md
docs/zh/development/: index.md
docs/zh/python/: index.md
example/: water.ipynb
examples/mt_scaling/: main.rs
include/: approx.hpp  cell_list.hpp  geom.hpp  mat3.hpp  region.h  region.hpp  sarw.h  sarw.hpp  structure.hpp  vec3.hpp  vector3d.h  vector3d.hpp
include/packer/: packer.hpp  sarw.hpp
python/: Cargo.toml  pyproject.toml
python/examples/: pack_water_cube.py
python/python/molpack/: molpack.pyi  relaxer.py
python/src/: interop.rs
python/tests/: test_collective_restraint.py  test_constraint.py  test_custom_restraint.py  test_handler.py  test_pack_result.py  test_packer.py  test_relaxer.py
scripts/: run-python-tests.sh  run-rust-tests.sh
src/: cases.rs  gemo.cpp  handler.rs  lib.rs  molpack.cpp  numerics.rs  objective.rs  random.rs  region.rs  sarw.cpp  structure.cpp  target.rs  validation.rs
src/chemfile/: mod.rs  xyz.rs
src/context/: pack_context.rs
src/gencan/: mod.rs
src/io/: xyz.rs
src/molpack/: __init__.py  app.py  target.py
src/molpack/optimizer/: __init__.py  base.py  nlopt.py  packmol.py
src/molpack/packer/: __init__.py  nlopt.py  packmol.py
src/packer/: sarw.cpp
src/relaxer/: lbfgs.rs  mod.rs
src/restraint/: mod.rs
src/restraint/collective/: exponential.rs  gaussian.rs  geometry.rs
test/: CMakeLists.txt  cell_list.cpp  cell_list_test.cpp  geom.cpp  mat3.cpp  region.cpp  region_test.cpp  sarw.cpp  sarw_test.cpp  structure.cpp  vec3.cpp  vec3_test.cpp  vector3d_test.cpp
tests/: cli.rs  parallel_equivalence.rs
