[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "molcrafts-molpack"
version = "0.1.1"
description = "Python bindings for molpack molecular packing (Packmol port)"
requires-python = ">=3.12"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = ["numpy>=2.0", "typer>=0.12", "molcrafts-molrs>=0.7.0", "molcrafts-molpy>=0.7.0"]

# Installable "extra" carrying the docs-build deps. Unlike the [dependency-groups]
# doc group below (dev/CI-only, installs deps but not the package), an extra ships
# in the wheel metadata, so a *prebuilt-wheel* install pulls it with no Rust build:
#   pip install "molcrafts-molpack[doc]"
# That is the build command a Cloudflare Pages Git-integration build should use.
[project.optional-dependencies]
doc = [
  "zensical>=0.0.45",
  "molcrafts-zensical-theme>=0.1.1",
]

# PEP 735 dependency groups — the single source of truth for dev-time
# deps used by both CI jobs and local pre-commit hooks.
#
# Install with `pip install --group <name>` (pip 25.1+) from this directory.
[dependency-groups]
typecheck = [
  "ruff",
  "ty",
  "typer>=0.12",
  "numpy>=2.0",
  "molcrafts-molrs>=0.7.0",
  # `ty check` walks tests/ which imports pytest.
  "pytest",
]
test = [
  "pytest",
  "typer>=0.12",
  "numpy>=2.0",
  "molcrafts-molrs>=0.7.0",
]
dev = [
  {include-group = "typecheck"},
  {include-group = "test"},
  "maturin",
]
# Documentation build. Zensical is the static-site generator; it reads the
# single site config at ../zensical.toml (the Python binding docs live under
# ../docs/python/ as the "Python" nav section). That config sets
# `theme.name = "molcrafts"` — the shared MolCrafts brand extension, now on
# PyPI, so the docs build is reproducible from this group alone.
doc = [
  "zensical>=0.0.45",
  # The molcrafts docs theme (zensical.toml sets `theme.name = "molcrafts"`).
  "molcrafts-zensical-theme>=0.1.1",
]

[project.scripts]
molpack = "molpack.cli:app"

[project.urls]
Homepage = "https://github.com/MolCrafts/molpack"
Repository = "https://github.com/MolCrafts/molpack"

[tool.maturin]
python-source = "python"
module-name = "molpack.molpack"
features = ["pyo3/extension-module", "rayon"]
exclude = [
  "python/molpack/*.so",
  "python/molpack/*.dylib",
  "python/molpack/*.dll",
  "python/molpack/*.dSYM",
  "python/molpack/*.dSYM/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: end-to-end packing tests, some needing an external engine (LAMMPS via molpy)",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["python", "tests", "examples"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]
ignore = [
  "E501", # line too long — enforced by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["molpack"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
[tool.ty.environment]
python-version = "3.12"
# tests import _common via sys.path.insert at runtime; ty cannot follow dynamic
# path manipulation, so we declare the examples dir as an extra source root.
extra-paths = ["examples"]
